# ClaudeWatch

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.claude/: settings.local.json
docs/plans/: 2025-02-04-claude-usage-widget-design.md
res/: app.rc
src/: config.cpp  config.h  http_client.cpp  http_client.h  main.cpp  parser.cpp  parser.h  resource.h  ui.cpp  ui.h
